Sat May 13 20:35:08 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Now you can press 'r' to reload images too.

Sat May 13 20:24:18 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Hide menu, *then* perform action. Otherwise hitting "reload" on
	an http:// image over a slow connection keeps the mouse grab until
	finished. Messy ;-)

Sat May 13 19:54:46 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Make the menus slightly prettier. I wish I had an artistic bone
	somewhere in my body...

Sat May 13 18:04:58 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Use realpath() to cleanup paths before sticking them in a
	filelist. Added --menu-font, -M so that you can use whatever font
	you like for menus.

Sat May 13 00:11:06 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Menus. They need some work, but are mostly good.
	* I owe many thanks to raster here, 'cos I pinched some functions
        from efm to save time :-)
	* Added --auto-zoom. Currently only works with --no-progressive, I
	need to fix that soonish...

Tue May  9 22:04:37 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Now --filelist is -f, relegating -font to -e. *shrug*.

Tue May  9 21:57:14 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Now --theme is -t instead of -C (duh).

Tue May  9 21:35:34 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Now --action is A, and --ignoreaspect is X.

Tue May  9 21:30:59 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Now randomize is -z, which makes a little more sense.

Tue May  9 21:15:57 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Swapped -g and -c so that --collage gets the -c it fits, and
	randomize gets -g. I need to rework all these short options,
	they're a mess right now. Sorry if I break anyone's configs doing
	this :-(

Tue May  9 21:09:15 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Removed -B, --booth, as it's just a combo of options now doable
	in the config file. I stuck it in the example config instead...
