@@ -1,3 +1,7 @@
+Sat May 13 20:53:12 2000  Tom Gilbert  <gilbertt@btinternet.com>
+
+	* Add -N, --no-menus option for people who Just Want The Pr0n [tm]
+
 Sat May 13 20:35:08 2000  Tom Gilbert  <gilbertt@btinternet.com>
 
 	* Now you can press 'r' to reload images too.
